--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <GridLayout
+        android:id="@+id/grid"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:columnCount="4"
         android:rowCount="2">
         <Button
@@ -39,6 +40,16 @@
             android:id="@+id/button_d100"
             android:text="@string/dice_d100"
             android:layout_gravity="left|top" />
+        <Button
+            android:id="@+id/sum"
+            android:text="@string/sum"
+            android:layout_gravity="left|top" />
     </GridLayout>
+    <ListView
+        android:id="@+id/results"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/grid"
+        android:scrollIndicators="left" />
 
 </RelativeLayout>
