--- a/app/src/main/res/layout/result_view.xml
+++ b/app/src/main/res/layout/result_view.xml
@@ -4,6 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_below="@id/grid2"
     android:padding="10dp">
         <TextView
             android:id="@+id/txtRoll"
