--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7380c6</color>
-    <color name="colorPrimaryDark">#21295e</color>
+    <color name="colorPrimary">#aeb7ea</color>
+    <color name="colorPrimaryDark">#727dc2</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
